# agent4quant-skills

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  skill-feedback.yml
.github/workflows/: ci.yml
apps/agent4quant/: edgeone.json  index.html
apps/site/: cases.html  compliance.html  contact.html  index.html  pricing.html  robots.txt  skills.html  trust.html
config/: external-providers.example.toml  market-data.example.toml
docs/implementation/: 10-Skill-Publish-Content.md
examples/: demo-commands.sh
examples/sample-data/: README.md
output/batch-5m/: 000001.SZ.csv  000001.SZ.meta.json
output/market/: market.duckdb
output/regression-real-5m/: alpha.html  alpha.json  backtest.html  backtest.json  compare.json  dataset.json  manifest.json  risk.html  risk.json  summary.json
output/yfinance-cache/: cookies.db  tkr-tz.db
skills/quant-backtest/: README.md  (+1 more)
tests/: test_akshare_provider.py  test_alpha_engine.py  test_api_service.py  test_backtest_benchmark.py  test_backtest_compare.py  test_backtest_costs.py  test_backtest_reports.py  test_backtest_sweep.py  test_cli.py  test_commercial.py  test_config.py  test_data_manifest.py  test_data_validation.py  test_docs_consistency.py  test_duckdb_e2e.py  test_duckdb_provider.py  test_duckdb_sync.py  test_engine_edge_cases.py  test_external_provider_config.py  test_indicators.py  test_local_provider.py  test_provider_capabilities.py  test_report_generator.py  test_risk_engine.py  test_yfinance_integration.py  test_yfinance_provider.py
(+137 files in other folders)
